se agrega travis

--- a/Rpackages/fooPackage/DESCRIPTION
+++ b/Rpackages/fooPackage/DESCRIPTION
@@ -1,10 +1,17 @@
 Package: fooPackage
-Title: What the Package Does (one line, title case)
+Title: Read, summaries and plot a map from specific data
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Garcia", "Jose Antonio", email = "fou-foo@hotmail.com", role = c("aut", "cre"))
+Description: Read the data of the incidents stored in data from the US National Highway. Traffic Safety Administration's Fatality Analysis Reporting System which are compressed
+				in the following  url: (https://d3c33hcgiwev3.cloudfront.net/_e1adac2a5f05192dc8780f3944feec13_fars_data.zip?Expires=1487203200&Signature=jpCri1RCtoJ1S8Y5OevP7xzs9gEhY2yEYWhVLdtH--pP7u33Pgc2E8g1T52qgB-nMFoIg2fRS5do0oqCcef~VYkqK0h1qiO9k7tlLSDGMd~Ob~XCMMd8IMvrPE56YbhdBQm4UsPjqkshkC7IMtQVGHwQz4kvycAn-~VIogHfCU0_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A)
+				(the format of the files after decompressing is .csv), either of form unary or jointly 
+				(reading a list) and summarize the readings grouped by month and year and perform a 
+				visualization by state and year of reported incidents through a map.
 Depends: R (>= 3.3.2)
-License: What license is it under?
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
