--- a/Rpackages/fooPackage/NAMESPACE
+++ b/Rpackages/fooPackage/NAMESPACE
@@ -5,15 +5,8 @@ export(fars_read)
 export(fars_read_years)
 export(fars_summarize_years)
 export(make_filename)
-importFrom("\\code{dplyr},","\\code{filter}")
-importFrom("\\code{dplyr},","\\code{group_by}")
-importFrom("\\code{dplyr},","\\code{mutate}")
-importFrom("\\code{dplyr},","\\code{select}")
-importFrom("\\code{dplyr},","\\code{summarize}")
-importFrom("\\code{dplyr},","\\code{tbl_df},")
-importFrom("\\code{dplyr},",and)
-importFrom("\\code{graphics},","\\code{points}")
-importFrom("\\code{maps},","\\code{map}")
-importFrom("\\code{tidyr},","\\code{spread}")
-importFrom("dplyr,",tbl_df)
-importFrom("readr,",read_csv)
+import(dplyr)
+import(graphics)
+import(maps)
+import(readr)
+import(tidyr)
