primer intento falta najorar test y data

--- a/Finalproject/FooR/DESCRIPTION
+++ b/Finalproject/FooR/DESCRIPTION
@@ -15,14 +15,17 @@ Imports:
 Suggests: 
     knitr, 
     rmarkdown,
-    testthat
+    testthat, 
+    pander,
+    xtable,
+    qpdf
 Author: J. Antonio García
 Maintainer: J. Antonio García <jose.ramirez@cimat.mx>
 Description: Package that can be used to work with the NOAA Significant Earthquakes dataset. With data sample. 
     This dataset has retrieve from https://www.ngdc.noaa.gov/nndc/struts/form?t=101650&s=1&d=1 a substantial amount of information embedded in it that may not be immediately accessible to people without knowledge of the intimate details of the dataset or of R. This package 
     provides the tools for clean and visualizing the data in a pretty map so that others may extract some use out 
     of the information embedded within.
-License: GNU
+License: GPL
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
